--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
     "cra-template": "1.2.0",
+    "jspdf": "^2.5.2",
     "openai": "^4.77.0",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
+    "react-pdftotext": "^1.3.4",
     "react-scripts": "^5.0.1",
     "tesseract.js": "^5.1.1",
     "web-vitals": "^4.2.4"
