--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "react-pdftotext": "^1.3.4",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "tesseract.js": "^5.1.1",
     "web-vitals": "^4.2.4"
